<resources>
    <string name="app_name">NSCarLauncher</string>
    <string name="电台">电台</string>
    <string name="天气">天气</string>
    <string name="杭州交通经济广播">杭州交通经济广播</string>
    <string name="车辆未授权">车辆未授权</string>
    <string name="天">天</string>
    <string name="一">一</string>
    <string name="二">二</string>
    <string name="三">三</string>
    <string name="四">四</string>
    <string name="五">五</string>
    <string name="六">六</string>
    <string name="蓝牙音乐">蓝牙音乐</string>
    <string name="bt_tip">蓝牙未连接，请先连接蓝牙</string>
    <string name="暂无音乐">暂无音乐</string>
    <string name="本地音乐">本地音乐</string>
    <string name="音乐列表">音乐列表</string>
    <string name="电话">电话</string>
    <string name="号码">号码</string>
    <string name="联系人">联系人</string>
    <string name="通话记录">通话记录</string>
    <string name="保持通话">保留通话：</string>
    <string name="设置">设置</string>
    <string name="应用中心">应用中心</string>
    <string name="显示">显示</string>
    <string name="蓝牙">蓝牙</string>
    <string name="WiFi">WiFi</string>
    <string name="均衡器">均衡器</string>
    <string name="车辆设置">车辆设置</string>
    <string name="能量回收">能量回收</string>
    <string name="制动回收开关">制动回收开关</string>
    <string name="升级">升级</string>
    <string name="关于">关于</string>
    <string name="帮助">帮助</string>
    <string name="我的设备">我的设备</string>
    <string name="整车控制">整车控制</string>
    <string name="导航">导航</string>
    <string name="空调">空调</string>
    <string name="室内">室内</string>
    <string name="usb">USB音乐</string>
    <string name="MusicCol">收藏音乐</string>
    <string name="刷新列表">刷新列表</string>
    <string name="暂无本地音乐">暂无本地音乐</string>
    <string name="新密码">新密码：</string>
    <string name="请输入蓝牙密码">请输入蓝牙密码</string>
    <string name="请输入无线密码">请输入无线密码</string>
    <string name="亮度">亮度</string>
    <string name="autolight">自动调节亮度</string>
    <string name="语言和输入法">语言和输入法</string>
    <string name="语言">语言</string>
    <string name="键盘和输入法">键盘和输入法</string>
    <string name="日期和时间">日期和时间</string>
    <string name="使用24小时制">使用24小时制</string>
    <string name="设备基板名称">基带版本</string>
    <string name="设备名称">设备名称</string>
    <string name="版本号">版本号</string>
    <string name="默认状态">默认状态</string>
    <string name="车辆已授权">车辆已授权</string>
    <string name="Sport">sport</string>
    <string name="model">型号</string>
    <string name="android">Android版本</string>
    <string name="baseversion">基频版本</string>
    <string name="coreversion">核心版本</string>
    <string name="固件版本">固件版本</string>
    <string name="驱动名">驱动名</string>
    <string name="versionnum">版本号码</string>
    <string name="视频列表">视频列表</string>
    <string name="本地视频">本地视频</string>
    <string name="USB视频">USB视频</string>
    <string name="暂无视频">暂无视频</string>
    <string name="视频">视频</string>
    <string name="断开">断开</string>
    <string name="连接">连接</string>
    <string name="电话接入">电话接入：</string>
    <string name="Economic">Economy</string>
    <string name="NEDC">NEDC</string>
    <string name="Irascible">Irascible</string>
    <string name="safetip">车辆在高速运行，为确保安全，暂时无法进行操作</string>
    <string name="密码">密码</string>
    <string name="取消">取消</string>
    <string name="确认">确认</string>
    <string name="定位失败">定位失败，由于手机没插sim卡且WIFI功能被关闭</string>
    <string name="未安装该应用">未安装该应用</string>
    <string name="蓝牙未连接">蓝牙未连接</string>
    <string name="空调未连接">空调未连接</string>
    <string name="BCM未连接">BCM未连接</string>
    <string name="USB接入">USB接入</string>
    <string name="USB拔出">USB拔出</string>
    <string name="星期日">星期日</string>
    <string name="星期一">星期一</string>
    <string name="星期二">星期二</string>
    <string name="星期三">星期三</string>
    <string name="星期四">星期四</string>
    <string name="星期五">星期五</string>
    <string name="星期六">星期六</string>
    <string name="更改蓝牙密码">更改蓝牙密码</string>
    <string name="旧密码">旧密码：</string>
    <string name="附近网络">附近网络</string>
    <string name="当前连接网络">当前连接网络</string>
    <string name="更多应用">更多应用</string>
    <string name="下午">下午 </string>
    <string name="上午">上午 </string>
    <string name="上一台">上一台</string>
    <string name="开关">开关</string>
    <string name="下一台">下一台</string>
    <string name="上一曲">上一曲</string>
    <string name="下一曲">下一曲</string>
    <string name="播放">播放</string>
    <string name="拨号">拨号</string>
    <string name="后备箱">后备箱</string>
    <string name="中控锁">中控锁</string>
    <string name="开窗">开窗</string>
    <string name="回家">回家</string>
    <string name="上班">上班</string>
    <string name="商城">商城</string>
    <string name="剩余里程">剩余里程</string>
    <string name="是否将文件导入本地">是否将文件导入本地</string>
    <string name="更改蓝牙名称">更改蓝牙名称</string>
    <string name="旧名称">旧名称：</string>
    <string name="新名称">新名称：</string>
    <string name="请输入蓝牙名称">请输入蓝牙名称</string>
    <string name="暂停">暂停</string>
    <string name="自定义">自定义</string>
    <string name="关闭">关闭</string>
    <string name="现场">现场</string>
    <string name="舞曲">舞曲</string>
    <string name="古典">古典</string>
    <string name="柔和">柔和</string>
    <string name="普通">普通</string>
    <string name="民族">民族</string>
    <string name="重金属">重金属</string>
    <string name="嘻哈">嘻哈</string>
    <string name="爵士">爵士</string>
    <string name="流行">流行</string>
    <string name="摇滚">摇滚</string>
    <string name="eq关闭">关闭</string>
    <string name="wallpaper">壁纸</string>
    <string name="编译时间">编译时间</string>
    <string name="reset">恢复出厂设置</string>
    <string name="sysupgrade">系统升级</string>
    <string name="resetupgradeinfo">此操作会清除您车载内存设备中的所有数据，包括：\n\n您的Google账户\n系统及应用数据和设置\n已下载应用\n音乐\n照片\n其他用户数据</string>
    <string name="resetcar">重置车载</string>
    <string name="warninfo">要清除所有个人信息和下载的应用吗？请注意，此操作无法撤销！</string>
    <string name="clearall">清除全部内容</string>
    <string name="copy">导入</string>
    <string name="delete">删除</string>
    <string name="cancle">取消</string>
    <string name="importerr">导入失败</string>
    <string name="record">录像</string>
    <string name="stop">停止</string>
    <string name="yc">异常</string>
    <string name="cat">抓拍</string>
    <string name="five">5连拍</string>
    <string name="sslx">缩时录像</string>
    <string name="correct_time">校时</string>
    <string name="capability">能力集</string>
    <string name="event">事件视频</string>
    <string name="cycle">循环视频</string>
    <string name="user">用户拍摄</string>
    <string name="rec">REC</string>
    <string name="fbl">720P</string>
    <string name="chose">选择</string>
    <string name="time">TIME</string>
    <string name="now">00:00:00</string>
    <string name="total">02:00:00</string>
    <string name="set">设置</string>
    <string name="fenbianlv">分辨率</string>
    <string name="high">1080P</string>
    <string name="low">720P</string>
    <string name="timelong">录像时长</string>
    <string name="one_min">1分钟</string>
    <string name="three_min">3分钟</string>
    <string name="five_min">5分钟</string>
    <string name="kdt">宽动态</string>
    <string name="dist_corr">畸变校正</string>
    <string name="sd">SD卡</string>
    <string name="format">格式化SD卡</string>
    <string name="sensor">G-sensor敏感度</string>
    <string name="lower">低</string>
    <string name="mid">中</string>
    <string name="higher">高</string>
    <string name="ysgj">延时关机</string>
    <string name="close">关闭</string>
    <string name="ten">10秒</string>
    <string name="six">1分钟</string>
    <string name="back_set">恢复出厂设置</string>
    <string name="shutdown">关机</string>
    <string name="reboot">重启</string>
    <string name="jk">停车监控</string>
    <string name="kg">录音开关</string>
    <string name="radio">行车记录录像</string>
    <string name="auto">自动上传</string>
    <string name="plus">行驶信息叠加</string>
    <string name="overwrite">启动事件录像循环覆盖</string>
    <string name="info">设备信息</string>
    <string name="yj">硬件版本号</string>
    <string name="gj">固件版本号</string>
    <string name="js">自动校时</string>
    <string name="ssp">随手拍</string>
    <string name="dp">单拍</string>
    <string name="flp">5连拍</string>
    <string name="czjg">抽帧间隔</string>
    <string name="spzs">视频帧数</string>
    <string name="bfzl">播放帧率</string>
    <string name="certain">确定</string>
    <string name="zrl">总容量</string>
    <string name="syrl">剩余容量</string>
    <string name="kzt">卡状态</string>
    <string name="sysm">剩余寿命</string>
    <string name="complete">完成</string>
    <string name="del">删除</string>
    <string name="cerdel">确认删除</string>
    <string name="dele">删除</string>
    <string name="sucdel">删除成功</string>
    <string name="cac">取消</string>
    <string name="startrec">开始录像</string>
    <string name="stoprec">结束录像</string>
    <string name="handrec">手动录像</string>
    <string name="zp">抓拍</string>
    <string name="handsuc">手动录像成功</string>
    <string name="stopsuc">停止录像成功</string>
    <string name="catsuc">抓拍成功</string>
    <string name="cutsuc">缩时录像成功</string>
    <string name="cutfail">缩时录像失败</string>
    <string name="catfail">抓拍失败</string>
    <string name="handfail">手动录像失败</string>
    <string name="qd">确定</string>
    <string name="succformat">格式化成功</string>
    <string name="qx">取消</string>
    <string name="resetsettings">恢复出厂设置</string>
    <string name="setcer">确定</string>
    <string name="successreset">恢复出厂设置成功</string>
    <string name="cancelreset">取消</string>
    <string name="success">成功</string>
    <string name="cermove">确认移动</string>
    <string name="move">移动</string>
    <string name="sucmove">移动成功</string>
    <string name="file_empty">文件列表为空</string>
    <string name="can_not_move">该类型不支持移动</string>
    <string name="select_file_first">请先选择文件</string>
    <string name="corr_time_success">校时成功</string>
    <string name="disconnect">断开</string>
    <string name="setting_success">设置成功</string>
    <string name="setting_failure">设置失败</string>
    <string name="preview">预览</string>
    <string name="应用">应用</string>
    <string name="能量">能量</string>
    <string name="未知音乐">未知音乐</string>
    <string name="歌手">歌手</string>
    <string name="文件tip">文件大小超过内存空间！无法复制</string>
    <string name="未选择文件">未选择文件</string>
    <string name="当前无歌曲播放">当前无歌曲播放</string>
    <string name="暂无歌词">暂无歌词</string>
    <string name="蓝牙电话">蓝牙电话</string>
    <string name="麦克风">麦克风</string>
    <string name="拨号键盘">拨号键盘</string>
    <string name="音量">音量</string>
    <string name="正在呼叫">正在呼叫...</string>
    <string name="通讯录">通讯录</string>
    <string name="近光灯">近光灯</string>
    <string name="远光灯">远光灯</string>
    <string name="示宽灯">示宽灯</string>
    <string name="后雾灯">后雾灯</string>
    <string name="设备加载中">设备加载中...</string>
    <string name="室内温度">室内温度</string>
    <string name="OFF">OFF</string>
    <string name="ON">ON</string>
    <string name="AC">A/C</string>
    <string name="PTC">PTC</string>
    <string name="内循环">内循环</string>
    <string name="外循环">外循环</string>
    <string name="吹面">吹面</string>
    <string name="吹脚">吹脚</string>
    <string name="吹面吹脚">吹面吹脚</string>
    <string name="吹脚除雾">吹脚除雾</string>
    <string name="除霜除雾">除霜除雾</string>
    <string name="摄氏度">℃</string>
    <string name="能量管理">能量管理</string>
    <string name="剩余电流">剩余电流</string>
    <string name="总电压">总电压</string>
    <string name="总电流">总电流</string>
    <string name="最高温度">最高温度</string>
    <string name="最低温度">最低温度</string>
    <string name="单体最高">单体最高</string>
    <string name="单体最低">单体最低</string>
    <string name="绝缘电阻">绝缘电阻</string>
    <string name="电池数量">电池数量</string>
    <string name="剩余电量">剩余电量</string>
    <string name="箱">箱</string>
    <string name="收藏列表">收藏列表</string>
    <string name="搜索中">搜索中</string>
    <string name="设备接入">设备接入</string>
    <string name="设备移除">设备移除</string>
    <string name="当前无视频播放">当前无视频播放</string>
    <string name="SD视频">SD视频</string>
    <string name="显示与亮度">显示与亮度</string>
    <string name="无线网络">无线网络</string>
    <string name="语言切换">语言切换</string>
    <string name="中文">中文</string>
    <string name="English">English</string>
    <string name="输入法切换">输入法切换</string>
    <string name="自动更新">自动更新</string>
    <string name="使用网络更新">使用网络更新</string>
    <string name="设置日期">设置日期</string>
    <string name="设置时间">设置时间</string>
    <string name="选择时区">选择时区</string>
    <string name="确定">确定</string>
    <string name="year">年</string>
</resources>