<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@mipmap/ic_f_fm_bg"
    android:id="@+id/music_local">

<ImageView
    android:id="@+id/music_local_return"
    android:layout_width="40px"
    android:layout_height="30px"
    android:layout_marginLeft="120px"
    android:layout_marginTop="148px"
    android:src="@mipmap/set_button_return"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/音乐列表"
        android:layout_marginLeft="200px"
        android:layout_marginTop="146px"
        android:textColor="#EDEDED"
        android:textSize="36px" />

    <TextView
        android:id="@+id/music_local_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/本地音乐"
        android:layout_marginLeft="200px"
        android:layout_marginTop="243px"
        android:textColor="@drawable/select_music_local_text_bg"
        android:textSize="36px" />

    <TextView
        android:id="@+id/music_local_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usb"
        android:layout_marginLeft="200px"
        android:layout_marginTop="347px"
        android:textColor="@drawable/select_music_local_text_bg"
        android:textSize="36px" />
    <TextView
        android:id="@+id/music_local_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MusicCol"
        android:layout_marginLeft="200px"
        android:layout_marginTop="451px"
        android:textColor="@drawable/select_music_local_text_bg"
        android:textSize="36px" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="200px"
        android:layout_marginTop="444px">

        <ImageView
            android:visibility="gone"
            android:id="@+id/music_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/local_music_refresh"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/operate_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/recyclerView_musiclocoal"
        android:layout_alignTop="@+id/music_local_return"
        android:orientation="horizontal"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/btn_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:button="@drawable/check_style" />

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:paddingLeft="10px"
            android:paddingRight="10px"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@mipmap/operate_bg"
            android:textSize="30px"
            android:text="@string/delete"/>

        <TextView
            android:id="@+id/btn_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:paddingLeft="10px"
            android:paddingRight="10px"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@mipmap/operate_bg"
            android:textSize="30px"
            android:text="@string/copy" />

        <TextView
            android:id="@+id/btn_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10px"
            android:paddingRight="10px"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@mipmap/operate_bg"
            android:textSize="30px"
            android:text="@string/cancle" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:overScrollMode="never"
        android:id="@+id/recyclerView_musiclocoal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220px"
        android:layout_marginLeft="450px"
        android:layout_marginRight="95px"
        android:scrollbars="none">

    </android.support.v7.widget.RecyclerView>
    <RelativeLayout
        android:visibility="visible"
        android:overScrollMode="never"
        android:id="@+id/rl_music_local_nodata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220px"
        android:layout_marginLeft="450px"
        android:layout_marginRight="95px"
        android:background="#00000000">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="48px"
            android:textColor="@color/colorText"
            android:text="@string/暂无音乐"/>

    </RelativeLayout>
</RelativeLayout>