<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="132px"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_set_eq_self"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/自定义"
        android:textSize="36px"
        android:textColor="@drawable/select_music_local_text_bg2"
        />
    <TextView
        android:id="@+id/tv_set_eq_close"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/tv_set_eq_self"
        android:layout_marginLeft="95px"
    android:text="@string/关闭"
    android:textSize="36px"
    android:textColor="@drawable/select_music_local_text_bg2"/>
    <TextView
        android:id="@+id/tv_set_eq_rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/tv_set_eq_close"
        android:layout_marginLeft="110px"
        android:text="@string/摇滚"
        android:textSize="36px"
        android:textColor="@drawable/select_music_local_text_bg2"/>
    <TextView
        android:id="@+id/tv_set_eq_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/tv_set_eq_rock"
        android:layout_marginLeft="110px"
        android:text="@string/流行"
        android:textSize="36px"
        android:textColor="@drawable/select_music_local_text_bg2"/>

    <TextView
        android:id="@+id/tv_set_eq_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/tv_set_eq_popular"
        android:layout_marginLeft="110px"
        android:text="@string/现场"
        android:textSize="36px"
        android:textColor="@drawable/select_music_local_text_bg2"/>

    <TextView
        android:id="@+id/tv_set_eq_dance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/tv_set_eq_live"
        android:layout_marginLeft="110px"
        android:text="@string/舞曲"
        android:textSize="36px"
        android:textColor="@drawable/select_music_local_text_bg2"/>
    <TextView
        android:id="@+id/tv_set_eq_classical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/tv_set_eq_dance"
        android:layout_marginLeft="110px"
        android:text="@string/古典"
        android:textSize="36px"
        android:textColor="@drawable/select_music_local_text_bg2"/>
    <TextView
        android:id="@+id/tv_set_eq_soft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/tv_set_eq_classical"
        android:layout_marginLeft="110px"
        android:text="@string/柔和"
        android:textSize="36px"
        android:textColor="@drawable/select_music_local_text_bg2"/>
    <ImageView
        android:id="@+id/iv_set_eq_rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/select_set_eq_select_img"
        app:layout_constraintLeft_toLeftOf="@+id/tv_set_eq_rock"
        app:layout_constraintRight_toRightOf="@+id/tv_set_eq_rock"
        app:layout_constraintTop_toBottomOf="@+id/tv_set_eq_rock"/>

    <ImageView
        android:id="@+id/iv_set_eq_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/select_set_eq_select_img"
        app:layout_constraintLeft_toLeftOf="@+id/tv_set_eq_popular"
        app:layout_constraintRight_toRightOf="@+id/tv_set_eq_popular"
        app:layout_constraintTop_toBottomOf="@+id/tv_set_eq_popular"/>

    <ImageView
        android:id="@+id/iv_set_eq_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/select_set_eq_select_img"
        app:layout_constraintLeft_toLeftOf="@+id/tv_set_eq_live"
        app:layout_constraintRight_toRightOf="@+id/tv_set_eq_live"
        app:layout_constraintTop_toBottomOf="@+id/tv_set_eq_live"/>

    <ImageView
        android:id="@+id/iv_set_eq_dance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/select_set_eq_select_img"
        app:layout_constraintLeft_toLeftOf="@+id/tv_set_eq_dance"
        app:layout_constraintRight_toRightOf="@+id/tv_set_eq_dance"/>
    <ImageView
        android:id="@+id/iv_set_eq_classical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/select_set_eq_select_img"
        app:layout_constraintLeft_toLeftOf="@+id/tv_set_eq_classical"
        app:layout_constraintRight_toRightOf="@+id/tv_set_eq_classical"
        app:layout_constraintTop_toBottomOf="@+id/tv_set_eq_classical"/>
    <ImageView
        android:id="@+id/iv_set_eq_soft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/select_set_eq_select_img"
        app:layout_constraintLeft_toLeftOf="@+id/tv_set_eq_soft"
        app:layout_constraintRight_toRightOf="@+id/tv_set_eq_soft"
        app:layout_constraintTop_toBottomOf="@+id/tv_set_eq_soft"/>
</android.support.constraint.ConstraintLayout>